--- a/ICML_workshop_submission/icml2016stylefiles/LIFTPAD.tex
+++ b/ICML_workshop_submission/icml2016stylefiles/LIFTPAD.tex
@@ -1,11 +1,16 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%% ICML 2015 EXAMPLE LATEX SUBMISSION FILE %%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Use the following line _only_ if you're still using LaTeX 2.09.
 %\documentstyle[icml2015,epsf,natbib]{article}
 % If you rely on Latex2e packages, like most modern people use this:
 \documentclass{article}
+
+\usepackage[english]{babel}
+\usepackage[utf8x]{inputenc}
+\usepackage{amsmath}
+\usepackage{float}
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage[colorinlistoftodos]{todonotes}
 
 % use Times
 \usepackage{times}
@@ -17,6 +22,7 @@
 % For citations
 \usepackage{natbib}
 
+
 % For algorithms
 \usepackage{amsmath}
 %\usepackage{algorithm}
@@ -25,8 +31,8 @@
 
 % As of 2011, we use the hyperref package to produce hyperlinks in the
 % resulting PDF.  If this breaks your system, please commend out the
-% following usepackage line and replace \usepackage{icml2015} with
-% \usepackage[nohyperref]{icml2015} above.
+% following usepackage line and replace \usepackage{icml2016} with
+% \usepackage[nohyperref]{icml2016} above.
 \usepackage{hyperref}
 
 % Packages hyperref and algorithmic misbehave sometimes.  We can fix
@@ -36,12 +42,12 @@
 % Employ the following version of the ``usepackage'' statement for
 % submitting the draft version of the paper for review.  This will set
 % the note in the first column to ``Under review.  Do not distribute.''
-\usepackage[accepted]{icml2015} 
+\usepackage[accepted]{icml2016} 
 
 % Employ this version of the ``usepackage'' statement after the paper has
 % been accepted, when creating the final version.  This will set the
 % note in the first column to ``Proceedings of the...''
-%\usepackage[accepted]{icml2015}
+%\usepackage[accepted]{icml2016}
 
 
 % The \icmltitle you define below is probably too long as a header.
@@ -76,9 +82,11 @@ A common criticism of neural networks is their lack of interpretability or ``bla
 \section{Introduction}
 \label{introduction}
 
-As neural networks become increasingly popular, their reputation as a ``black box" presents a barrier to adoption in fields where interpretability is paramount. Understanding the features that lead to a particular output builds trust with users and can lead to novel scientific discoveries. A common approach is to leverage the gradients of a particular output with respect to the individual inputs (Simonyan et al. - cite) - however, such approaches are limited because activation functions such as Rectified Linear Units (ReLUs) have a gradient of zero when they are not firing, yet a ReLU that does not fire can still carry information - particularly if the associated bias is positive (which means that in the absence of any input, the ReLU does fire). Similarly, sigmoid or tanh activations are popular choices for the activation functions of gates in memory units of recurrent neural networks such as GRUs and LSTMs (cite), but these activations have a near-zero gradient at high or low inputs even though such inputs can be very significant.
+As neural networks become increasingly popular, their reputation as a ``black box" presents a barrier to adoption in fields where interpretability is paramount. Understanding the features that lead to a particular output builds trust with users and can lead to novel scientific discoveries. Simonyan et al. (2013) proposed using the gradients of a particular output with respect to the individual inputs to generate saliency maps, and showed the superiority of this approach to the deconvolutional nets approach of Zeiler et al. (2013). Guided backpropagation (Springenberg et al. 2014) is another variant which only considers gradients that have positive error signal. As shown in Figure 1, saliency maps can be substantially improved by simply multiplying the gradient with the input signal, which corresponds to a first-order Taylor approximation of how the output would change if the input were set to zero. For piecewise linear networks, the layerwise relevance propagation rules described in Samek et al. (2015) reduce to this approach (which doesn't suffer from the same numerical stability problems), assuming that bias terms are included in the relevance propagation (derivation not shown).
 
-In this paper, we present a general method for assigning feature importance that focuses on the difference between a neuron's activation and its `reference' activation, where the reference activation is the activation that the neuron has when the network is provided a `reference input'. The reference input is defined on a domain-specific basis according to what is appropriate for the task at hand. This circumvents the aforementioned limitation of gradient-based approaches because, rather than relying on the local gradient at the point of activation, the activation is simply compared to its reference value. In the case of a ReLU that fires when provided the reference input (as is typically the case for ReLUs that have a positive bias), our method assigns a negative `difference from reference' when the ReLU does not fire. Similarly, in the case of a sigmoidal unit which has an output of $0.5$ when provided the reference input, our method would assign a positive `difference from reference' when the sigmoidal unit has an output near $1$, even though the gradient at that output is negligible.
+Gradient-based approaches are problematic because activation functions such as Rectified Linear Units (ReLUs) have a gradient of zero when they are not firing, and yet a ReLU that does not fire can still carry information - particularly if the associated bias is positive (which means that in the absence of any input, the ReLU does fire). Similarly, sigmoid or tanh activations are popular choices for the activation functions of gates in memory units of recurrent neural networks such as GRUs and LSTMs (Chung et al. 2014; Hochreiter and Schmidhuber 1997), but these activations have a near-zero gradient at high or low inputs even though such inputs can be very significant.
+
+Here we present a general method for assigning feature importance that focuses on the difference between a neuron's activation and its `reference' activation, where the reference activation is the activation that the neuron has when the network is provided a `reference input'. The reference input is defined on a domain-specific basis according to what is appropriate for the task at hand. This circumvents the limitation of gradient-based approaches because, rather than relying on the local gradient at the point of activation, the activation is simply compared to its reference value. In the case of a ReLU that fires when provided the reference input (as is typically the case for ReLUs that have a positive bias), our method assigns a negative `difference from reference' when the ReLU does not fire. Similarly, in the case of a sigmoidal unit which has an output of $0.5$ when provided the reference input, our method would assign a positive `difference from reference' when the sigmoidal unit has an output near $1$, even though the gradient at that output is negligible.
 
 \section{LIFTPAD Method}
 \label{LIFTPAD}
@@ -115,10 +123,8 @@ The equation above follows from the linear composition property and the definiti
 \begin{equation}
 \begin{aligned}
 C_{xt} &= \sum_{y \in O_x} \frac{C_{xy}}{\delta_y}C_{yt}\\
-m_{xt} \delta_x &= \sum_{y \in O_x} \frac{C_{xy}}{\delta_y}(m_{yt} \delta_y)\\
-                         &= \sum_{y \in O_x} C_{xy}m_{yt}\\
-m_{xt} &= \sum_{y \in O_x} \frac{C_{xy}}{\delta_x}m_{yt}\\
-m_{xt} &= \sum_{y \in O_x} m_{xy} m_{yt}
+m_{xt} \delta_x &= \sum_{y \in O_x} \frac{C_{xy}}{\delta_y}(m_{yt} \delta_y) = \sum_{y \in O_x} C_{xy}m_{yt}\\
+m_{xt} &= \sum_{y \in O_x} \frac{C_{xy}}{\delta_x}m_{yt} = \sum_{y \in O_x} m_{xy} m_{yt}
 \end{aligned}
 \end{equation} 
 
@@ -154,49 +160,77 @@ A_y^0 = \left(\sum_{x \in I_y} w_{xy} A_x^0 \right) + b
 Thus, canceling out $A_y^0$ yields:
 \begin{equation}
 \begin{aligned}
-\delta_y &= \sum_{x \in I_y} w_{xy} \delta_x\\
-             &= \sum_{x \in I_y} m_{xy} \delta_x
+\delta_y &= \sum_{x \in I_y} w_{xy} \delta_x = \sum_{x \in I_y} m_{xy} \delta_x
 \end{aligned}
 \end{equation} 
 
-\subsubsection{Max pooling over convolutional filters}
+%\subsubsection{Maxpooling over convolutional filters}
 
-We consider the case of maxpooling over a set of neurons in a convolutional layer which all belong to the same convolutional filter:
+%We consider the case of maxpooling over a set of neurons in a convolutional layer which all belong to the same convolutional filter:
+%\begin{equation}
+%A_y = \max_{x \in I_y} A_x
+%\end{equation}
+%We make the assumption that all instances of a single convolutional filter have the same reference activation, i.e. $A_x^0$ is the same for all $x$ in $I_y$ (this would not hold if the chosen reference input were not uniform across all positions; the appropriate multiplier in that situation can be computed using the general formula for $m_{xy}$ provided above). Then we have:
+%\begin{equation}
+%m_{xy} = \bm{1}\{A_x = A_y\}
+%\end{equation}
+%Where $\bm{1}\{\}$ is the indicator function. If a symbolic computation package is used, then the gradient of $y$ with respect to $x$ can be used in place of $\bm{1}\{A_x = A_y\}$.
+
+%{\bf Proof.} Because $A_x^0$ is assumed to be the same for all $x$, we have that $A_y^0 = A_x^0$. As $A_y = A_y^0 + \delta_y$, we get:
+%\begin{equation}
+%\begin{aligned}
+%\delta_y &= A_y - A_y^0 = A_y - A_x^0\\
+%             &= \bm{1}\{A_x = A_y\} (A_x - A_x^0)\\
+%             &= \bm{1}\{A_x = A_y\} \delta_x = m_{xy} \delta_x
+%\end{aligned}
+%\end{equation}
+
+\subsubsection{Max operation}
+
+We consider the case of max operation:
 \begin{equation}
 A_y = \max_{x \in I_y} A_x
 \end{equation}
-We make the assumption that all instances of a single convolutional filter have the same reference activation, i.e. $A_x^0$ is the same for all $x$ in $I_y$ (this would not hold if the chosen reference input were not uniform across all positions; the appropriate multiplier in that situation can be computed easily, but is omitted here for brevity). Then we have:
+Then we have:
 \begin{equation}
-m_{xy} = \bm{1}\{A_x = A_y\}
+m_{xy} = \bm{1}\{A_x = A_y\}\frac{\delta_y}{\delta_x}
 \end{equation}
 Where $\bm{1}\{\}$ is the indicator function. If a symbolic computation package is used, then the gradient of $y$ with respect to $x$ can be used in place of $\bm{1}\{A_x = A_y\}$.
 
-{\bf Proof.} Because $A_x^0$ is assumed to be the same for all $x$, we have that $A_y^0 = A_x^0$. As $A_y = A_y^0 + \delta_y$, we get:
+{\bf Proof.}
 \begin{equation}
 \begin{aligned}
-\delta_y &= A_y - A_y^0\\
-             &= A_y - A_x^0\\
-             &= \bm{1}\{A_x = A_y\} (A_x - A_x^0)\\
-             &= \bm{1}\{A_x = A_y\} \delta_x\\
-             &= m_{xy} \delta_x
+\sum_{x \in y} m_{xy} \delta_x &= \left(\sum_{x \in y} \bm{1}\{A_x = A_y\}\frac{\delta_y}{\delta_x}\right)\delta_x\\ &= \sum_{x \in y} \bm{1}\{A_x = A_y\}\delta_y = \delta_y
 \end{aligned}
 \end{equation}
 
-\subsubsection{Individual nonlinearity}
 
-Here we describe the rule for nonlinear transformations such as the ReLU, sigmoid and tanh which are applied to individual inputs, typically following some affine transformation. We have:
+\subsubsection{Other activations}
+The following choice for $m_{xy}$, which is the same for all inputs to $y$, satisfies summation-to-delta:\\
 \begin{equation}
-A_y = f(A_x)
+m_{xy} = \frac{\delta_{y}}{\sum_{x' \in I_y} \delta_{x'}}
 \end{equation}
-Where $f$ is the nonlinear transformation. When $\delta_x$ is large in magnitude, we can compute $m_{xy}$ according to its definition as follows:
+This rule may be used for nonlinearities like ReLUs, PReLUs, sigmoid and tanh (where $y$ has only one input), or for element-wise products. Situations where the denominator is near zero can be handled by applying L'hopital's rule, because by definition:
 \begin{equation}
-m_{xy} = \frac{\delta_y}{\delta_x}
+\delta_{y} \rightarrow 0 \text{ as} \sum_{x \in I_y} \delta_{x} \rightarrow 0
 \end{equation}
-When $\delta_x$ is small, the term on the right approaches $\frac{0}{0}$. However, as $\delta_y \rightarrow 0$ as $\delta_x \rightarrow 0$, we have:
-\begin{equation}
-\lim_{\delta_x \rightarrow 0} \frac{\delta_y}{\delta_x} = \frac{d \delta_y}{d \delta_x}
-\end{equation}
-Thus, when $\delta_x$ is close to zero, $m_{xy}$ is simply the derivative of $\delta_y$ with respect to $\delta_x$. Because $\delta_n = A_n - A_n^0$ and $A_n^0$ is a constant, this is the same as $\frac{dA_y}{dA_x}$ when $\delta_x$ is near $0$.
+
+
+%\subsubsection{Individual nonlinearity}
+
+%Here we describe the rule for nonlinear transformations such as the ReLU, sigmoid and tanh which are applied to individual inputs, typically following some affine transformation. We have:
+%\begin{equation}
+%A_y = f(A_x)
+%\end{equation}
+%Where $f$ is the nonlinear transformation. When $\delta_x$ is large in magnitude, we can compute $m_{xy}$ according to its definition as follows:
+%\begin{equation}
+%m_{xy} = \frac{\delta_y}{\delta_x}
+%\end{equation}
+%When $\delta_x$ is small, the term on the right approaches $\frac{0}{0}$. However, as $\delta_y \rightarrow 0$ as $\delta_x \rightarrow 0$, we have:
+%\begin{equation}
+%\lim_{\delta_x \rightarrow 0} \frac{\delta_y}{\delta_x} = \frac{d \delta_y}{d \delta_x}
+%\end{equation}
+%Thus, when $\delta_x$ is close to zero, $m_{xy}$ is simply the derivative of $\delta_y$ with respect to $\delta_x$. Because $\delta_n = A_n - A_n^0$ and $A_n^0$ is a constant, this is the same as $\frac{dA_y}{dA_x}$ when $\delta_x$ is near $0$.
 
 \subsection{A note on final activation layers}
 
@@ -211,10 +245,8 @@ A_{t_i} = \frac{e^{A_{y_i}}}{\sum_{i' = 1}^n e^{A_{y_i'}}}
 Here, $A_{y_1}...A_{y_n}$ are affine functions of their inputs. Let $x$ represent a neuron that is an input to $A_{y_1}...A_{y_n}$, and let $w_{xy_i}$ represent the coefficient of $A_x$ in $A_{y_i}$. Because $A_{y_1}...A_{y_n}$ are followed by a softmax transformation, if $w_{xy_i}$ is the same for all $y_i$ (that is, $x$ contributes equally to all $y_i$), then $x$ effectively has zero contribution to $A_{t_i}$. This can be observed by substituting $A_{y_i} = w_{xy_i}A_x + r_{y_i}$ in the expression for $A_{t_i}$ and canceling out $e^{w_{xy_i}A_x}$ (here, $r_{y_i}$ is the sum of all the remaining terms in the affine expression for $A_{y_i}$)
 \begin{equation}
 \begin{aligned}
-A_{t_i} &= \frac{e^{A_{y_i}}}{\sum_{i' = 1}^n e^{A_{y_i'}}}\\
-           &= \frac{e^{w_{xy_i}A_x + r_{y_i}}}{\sum_{i' = 1}^n e^{w_{xy_{i'}}A_x + r_{y_{i'}}}}\\
-           &= \frac{e^{w_{xy_i}A_x + r_{y_i}}}{\sum_{i' = 1}^n e^{w_{xy_i}A_x + r_{y_{i'}}}}\\
-           &= \frac{e^{r_{y_i}}}{\sum_{i' = 1}^n e^{r_{y_{i'}}}} 
+A_{t_i} &= \frac{e^{A_{y_i}}}{\sum_{i' = 1}^n e^{A_{y_i'}}} = \frac{e^{w_{xy_i}A_x + r_{y_i}}}{\sum_{i' = 1}^n e^{w_{xy_{i'}}A_x + r_{y_{i'}}}}\\
+           &= \frac{e^{w_{xy_i}A_x + r_{y_i}}}{\sum_{i' = 1}^n e^{w_{xy_i}A_x + r_{y_{i'}}}} = \frac{e^{r_{y_i}}}{\sum_{i' = 1}^n e^{r_{y_{i'}}}} 
 \end{aligned}
 \end{equation}
 As mentioned in the previous subsection, in order to avoid attenuation of signal for highly confident predictions, we should compute $C_{xy_i}$ rather than $C_{xt_i}$. One way to ensure that $C_{xy_i}$ is zero if $w_{xy_i}$ is the same for all $y_i$ is to mean-normalized the weights as follows:
@@ -238,33 +270,37 @@ The normalization is desirable because, for affine functions, the multipliers $m
 
 \section{Results}
 
-\subsection{Tiny Imagenet}
+\subsection{Tiny ImageNet}
 
-A model with the VGG16 [cite] architecture was trained on a scaled-down version of the Imagenet dataset, dubbed `Tiny Imagenet'. The images were $64 \times 64$ in dimension and belonged to one of 200 output classes. Pictured are importance scores computed using three different approaches.
-
-\subsection{Genomics}
-
-We apply LIFTPAD to models that classify genomic sequences. The positive class requires that two particular DNA patterns - 'GATA' and 'CAGATG' - appear in the sequence together. They may appear at any spacing. The negative class has just one of the two patterns appearing either once or twice, also at any spacing. We simulate 20,000 sequences of length 200 for the positive set and 40,000 sequences for the negative set split equally between the two patterns. Outside the core patterns we randomly sample the remaining sequence with equal frequency for the four bases A, C, G and T. We trained a model on these sequences with 20 convolutional filters of length 15 with a PReLU and a max pool layer of stride 50 followed by two fully connected layers of size 200. This model performs well with auROC of 0.907. The misclassified examples primarily occur when one of the patterns erroneously arises in the randomly sampled background.  % We use dropout with probability 0.3, l1 activity regularization (1e-7) and a weight norm of 7 on the fully connected layers. 
-
-We then run LIFTPAD to assign an importance score to each base in the correctly predicted sequences. We also use a gradient-based method for comparison. In Figure 1 we illustrate that LIFTPAD clearly discovers both patterns and assigns them large importance scores as compared to the surrounding sequence. The gradient-based method discovers only one of the two important patterns despite a correct prediction.
-
-\begin{figure}[!htmb]
+A model with the VGG16 (Long et al., 2015) architecture was trained using the Keras framework (Chollet, 2015) on a scaled-down version of the Imagenet dataset, dubbed `Tiny Imagenet'. The images were $64 \times 64$ in dimension and belonged to one of 200 output classes. Results shown in Figure 1; the reference input was an input of all zeros after preprocessing.
+\begin{figure}[!ht]
 \begin{center}
-\includegraphics[scale=0.3]{LIFTPADSequence2.png}
-\includegraphics[scale=0.3]{GradientSequence2.png}
-\caption{LIFTPAD scores (top) and gradient-based scores (bottom) are plotted for each position in the DNA sequence and colored by the DNA base.}
+\includegraphics[scale=0.4]{TinyImagenetLIFTPAD.png}
+\caption{Comparison of methods to compute importance scores on Tiny ImageNet data. Left-to-right: original image, absolute value of the gradient, positive gradient*input (Taylor approximation), and positive LIFTPAD. LIFTPAD scores are less noisy than gradient*input.}
 \end{center}
 \end{figure}
- 
-\subsection{Extension to Recurrent Neural Networks}
+\subsection{Genomics}
+We apply LIFTPAD to models that classify genomic sequences. The positive class requires that two particular DNA patterns - 'GATA' and 'CAGATG' - appear anywhere in the length-200 sequence together. The negative class has just one of the two patterns appearing either once or twice. We simulate 20K sequences for the positive set and 40K sequences for the negative set split equally between the two patterns. Outside the core patterns (which were produced from a generative model) we randomly sample the remaining sequence with the four bases A, C, G and T. We trained a model using the Keras framework (Chollet, 2015) on one-hot encoded sequences with 20 convolutional filters of length 15 and stride 1 and a max pool layer of width and stride 50, followed by two fully connected layers of size 200. PReLU nonlinearities were used for the hidden layers. This model performs well with auROC of 0.907. The misclassified examples primarily occur when one of the patterns erroneously arises in the randomly sampled background. % We use dropout with probability 0.3, l1 activity regularization (1e-7) and a weight norm of 7 on the fully connected layers. 
 
-LIFTPAD is especially appropriate for computing importance scores in Recurrent architectures that involve gated memory units because, unlike with gradients, LIFTPAD contribution scores do not vanish at the extremes of a sigmoid or tanh function. To find importance scores, the computation would have to be done on the unrolled RNN graph.
+We then run LIFTPAD to assign an importance score to each base in the correctly predicted sequences (the reference input for LIFTPAD was an input of all zeros) and compared the results to the gradient*input (Figure 2).
+
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=230px,height=30px]{LIFTPADSequence2.png}
+\includegraphics[width=230px,height=30px]{GradientSequence2.png}
+\caption{LIFTPAD scores (top) and gradient-based scores (bottom) using gradient*input are plotted for each position in the DNA sequence and colored by the DNA base (due to one-hot encoding, input is either 1 or 0; gradient*input is equivalent to taking the gradient for the letter that is actually present). LIFTPAD discovers both patterns and assigns them large importance scores. Gradient-based method miss the GATA pattern.}
+\end{center}
+\end{figure}
 
 \subsection{Author contributions}
 
-AS and PG conceived of LIFTPAD. AS implemented LIFTPAD in software. PG led the application to genomics. AYS led the application to Tiny Imagenet. AK provided guidance and feedback. AS, PG, AYS and AK prepared the manuscript.
+AS \& PG conceived of LIFTPAD. AS implemented LIFTPAD in software. PG led application to genomics. AYS led application to Tiny Imagenet. AK provided guidance and feedback. AS, PG, AYS \& AK prepared the manuscript.
 
-\section{References}
+%CANNOT SEEM TO GET BIBTEX TO WORK...
+%\bibliographystyle{icml2016}
+\nocite{*}
+\bibliographystyle{icml2016}
+\bibliography{LIFTPAD_references}
 
 \end{document} 
 
