--- a/examples/tinyimagenet/DeepLIFT_on_imagenet.ipynb
+++ b/examples/tinyimagenet/DeepLIFT_on_imagenet.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,14 +78,14 @@
     "from vgg16_keras import *\n",
     "import h5py\n",
     "reload(deepLIFTutils)\n",
-    "#/srv/scratch/annashch/cs231n_project/vgg16_weights_dropout_regularization_augmenteddataTintContrast.stupidsgd.hdf5\n",
+    "path_to_weights_file = '/srv/scratch/annashch/cs231n_project/vgg16_weights_dropout_regularization_augmenteddataTintContrast.stupidsgd.hdf5'\n",
     "keras_model=VGG_16('vgg16_weights_dropout_regularization_augmenteddataTintContrast.stupidsgd.hdf5')\n",
     "#mean_normalise_softmax_weights(keras_model.layers[-2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -123,9 +123,70 @@
    "source": [
     "import h5py\n",
     "data=h5py.File('imagenet.validation.first50.hdf5','r')\n",
-    "validData=np.asarray(data['X_valid'])\n",
-    "Y_valid=np.asarray(data['Y_valid'])\n",
-    "data=validData "
+    "xData=data['X_valid']\n",
+    "yData=np.array(data['Y_valid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get indices of correct predictions\n",
+    "deeplift_output_func = theano.function([deeplift_model.get_layers()[0].get_activation_vars()],\n",
+    "                                        deeplift_model.get_layers()[-1].get_activation_vars(),\n",
+    "                                        allow_input_downcast=True)\n",
+    "deeplift_outputs = deeplift_util.run_function_in_batches(deeplift_output_func, input_data_list=[xData])\n",
+    "deeplift_outputs = np.array(deeplift_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "correct_predictions = [(i,np.max(deeplift_outputs[i]))\n",
+    "                              for i in xrange(len(yData)) if np.argmax(yData[i]) == np.argmax(deeplift_outputs[i])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "correct_prediction_lookup = dict([x for x in correct_predictions])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "predictions_output_file = \"predictions_summary.txt\"\n",
+    "fp.writeToFile(predictions_output_file, \"\\n\".join([str(i)+\"\\t\"+str(deeplift_outputs[i][np.argmax(yData[i])])\n",
+    "                                                         +\"\\t\"+str(i in correct_prediction_lookup)\n",
+    "                                                         +\"\\t\"+str(np.argmax(yData[i]))\n",
+    "                                                       for i in xrange(len(deeplift_outputs))]))"
    ]
   },
   {
@@ -178,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -195,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -203,26 +264,6 @@
    "source": [
     "target_contribs_func = deeplift_model.get_target_contribs_func(input_layer_idx=0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#compute the gradients\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
